# DesignPatterns

./: .gitignore  README.md
ab_factory/: main.cpp
ab_factory/include/: ab_factory.h
ab_factory/src/: ab_factory.cpp
decrator/: main.cpp
decrator/include/: componet.h
decrator/src/: componet.cpp
factory/: main.cpp
factory/include/: factory.h
factory/src/: factory.cpp
observe/: main.cpp
observe/include/: observe.h
observe/src/: observe.cpp
observe2/: main.cpp
observe2/include/: observer.h
observe2/src/: observer.cpp
status/: main.cpp
status/include/: status.h
status/src/: status.cpp
strategy/: main.cpp
strategy/include/: strategy.h
strategy/src/: strategy.cpp
strategy_2/: main.cpp
strategy_2/include/: strategy.h
strategy_2/src/: strategy.cpp
中介者模式/: README.md
中介者模式/mediator/: CMakeLists.txt  Colleague.cpp  Colleague.h  ConcreteColleague1.h  ConcreteColleague2.h  ConcreteMediator.h  Mediator.h  main.cpp
亨元模式/flyweight/: CMakeLists.txt  flyweight.cpp  flyweight.h  main.cpp
代理模式/: README.md
代理模式/Proxy/: CMakeLists.txt  main.cpp
单例模式/: README.md
单例模式/sigleton/: CMakeLists.txt  main.cpp
原型模式/: README.md
原型模式/Prototype_pattern/: CMakeLists.txt  Prototype.cpp  Prototype.h  (+1 more)
命令模式/: README.md
外观模式/: README.md
工厂模式/: README.md
建造者模式/: README.md
抽象工厂模式/: README.md
桥接模式/: README.md
桥接模式/bridge/: Abstraction.cpp  Abstraction.h  AbstractionImp.cpp  AbstractionImp.h  CMakeLists.txt  main.cpp
模版模式/: README.md
策略模式/: README.md
组合实体模式/: README.md
装饰器模式/: README.md
观察者模式/: README.md
适配器模式/: README.md
(+50 files in other folders)
